Adjusting contact us block text colour on dark bg

--- a/rca/static_src/sass/components/_contact.scss
+++ b/rca/static_src/sass/components/_contact.scss
@@ -83,7 +83,7 @@
 
     .bg--dark & {
         #{$root}__text {
-            color: $color--meta-darkbg;
+            color: $color--white;
         }
     }
 
