--- a/rca/static_src/sass/base/_layout.scss
+++ b/rca/static_src/sass/base/_layout.scss
@@ -12,7 +12,7 @@ Grid layout setup
     layout__@{{ breakpoint }}-span-{{ number }}
 - Numbers range from 1-5, as we use a 5 col grid
 - Breakpoints are medium and large
-- For example: "layout__@medium-start-1 layout__@medium-span-2" would start in column one, and span two columns
+- For example: "layout__@medium-start-1 layout__@medium-span-2" would start in column one, and span two columns for medium breakpoint
 - Replicates the "grid-column: number / span number" format that we've used previously
 
 */
