--- a/rca/static_src/sass/components/_image-video-block.scss
+++ b/rca/static_src/sass/components/_image-video-block.scss
@@ -101,7 +101,8 @@
     }
 
     .programme-overview &,
-    .research-centre-overview & {
+    .research-centre-overview &,
+    .app--project-detail & {
         padding-bottom: 0;
     }
 
