--- a/rca/static_src/sass/components/_project-overview.scss
+++ b/rca/static_src/sass/components/_project-overview.scss
@@ -1,18 +1,7 @@
-.research-centre-overview {
-    @include media-query(large) {
-        margin-bottom: ($gutter * 8);
-    }
-
-    &--no-margin {
-        margin: 0;
-    }
-
+.project-overview {
     &__content {
-        grid-column: 1 / span 2;
-
         @include media-query(large) {
             order: 2;
-            grid-column: 2 / span 3;
         }
     }
 
@@ -26,16 +15,19 @@
         }
     }
 
+    &__streamfield {
+        @include media-query(large) {
+            padding-left: 33.333%;
+        }
+    }
+
     &__heading {
         margin-bottom: $gutter;
     }
 
     &__key-details {
-        grid-column: 1 / span 2;
-
         @include media-query(large) {
             order: 1;
-            grid-column: 1 / span 1;
         }
     }
 }
