--- a/rca/static_src/sass/components/_rich-text.scss
+++ b/rca/static_src/sass/components/_rich-text.scss
@@ -87,4 +87,39 @@
             font-size: map-get($medium-font-sizes, xs);
         }
     }
+
+    .app--project-detail & {
+        h2 {
+            @include font-size(s);
+            border-width: 0 0 1px;
+            border-style: solid;
+            padding-bottom: ($gutter / 2);
+            margin-bottom: $gutter;
+        }
+
+        ul {
+            list-style: outside disc;
+            margin-left: $gutter;
+        }
+
+        li {
+            margin-bottom: ($gutter * 2);
+        }
+    }
+
+    .bg--dark & {
+        .app--project-detail & {
+            h2 {
+                border-color: $color--grid-line-light;
+            }
+        }
+    }
+
+    .bg--light & {
+        .app--project-detail & {
+            h2 {
+                border-color: $color--grid-line-dark;
+            }
+        }
+    }
 }
