--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -72,6 +72,7 @@
 @import 'components/profile-image';
 @import 'components/profile-teaser';
 @import 'components/programme-overview';
+@import 'components/project-overview';
 @import 'components/proposition-statement';
 @import 'components/related-content';
 @import 'components/related-links';
