--- a/rca/project_styleguide/templates/patterns/atoms/modal-launcher/modal-launcher.html
+++ b/rca/project_styleguide/templates/patterns/atoms/modal-launcher/modal-launcher.html
@@ -1,4 +1,9 @@
-<button data-micromodal-trigger="{{ modal }}" class="modal-launcher">
+
+{% if item.modal %}
+    <button data-micromodal-trigger="{{ item.modal }}" class="modal-launcher">
+{% else %}
+    <a href="{{ item.link }}" class="modal-launcher">
+{% endif %}
     <div class="modal-launcher__container">
         <div class="modal-launcher__label">
             {{ item.action }}
@@ -7,4 +12,8 @@
             <svg width="18" height="18" class="modal-launcher__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
         </div>
     </div>
-</button>
+{% if item.modal %}
+    </button>
+{% else %}
+    </a>
+{% endif %}
