--- a/rca/project_styleguide/templates/patterns/molecules/short-course-details/short-course-details.html
+++ b/rca/project_styleguide/templates/patterns/molecules/short-course-details/short-course-details.html
@@ -1,7 +1,9 @@
+
+{% load wagtailcore_tags %}
 <div class="short-course-details">
     <div class="short-course-details__container">
         <div class="short-course-details__header">
-            <h1 class="short-course-details__heading heading heading--two">Design Thinking & Innovation</h1>
+            <h1 class="short-course-details__heading heading heading--two">{{ page.title }}</h1>
         </div>
         <div class="short-course-details__content">
             <div class="short-course-details-item">
@@ -17,9 +19,9 @@
                     <h2 class="short-course-details-item__heading heading heading--five">Course details</h2>
                 </div>
                 <div class="short-course-details-item__content rich-text">
-                    <p>Early bird offer until 10 March 2020. Booking closes 18 March 2020 or when fully booked.</p>
-                    <p>Please be sure to read our <a href="#">Terms & Conditions</a> before applying.</p>
-                    <p>For more information, please visit our <a href="#">FAQs</a>.</p>
+                    {{ page.course_details_text|richtext }}
+                    {{ page.terms_and_conditions.body|safe }}
+                    {{ page.frequently_asked_questions.body|safe }}
                 </div>
             </div>
         </div>
